src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ATPStatus__c</fullName>
        <formula>Contact.Advanced_Tutor_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATP Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>The Area, if applicable, a Coordinator is responsible for</inlineHelpText>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BankAccountName__c</fullName>
        <label>Bank Account Name</label>
        <length>60</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BankAccountNumberEncrypted__c</fullName>
        <label>Bank Account Number</label>
        <length>8</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BankSortCodeEncrypted__c</fullName>
        <label>Bank Sort Code</label>
        <length>6</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>MyContactRecord__c</fullName>
        <formula>HYPERLINK(&apos;https://tutortrust--develop.lightning.force.com/lightning/r/Contact/&apos;&amp; ContactId&amp;&apos;/view&apos;, &apos;Click here&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Contact Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TutorArea__c</fullName>
        <formula>IF(ISBLANK(ContactId), TEXT(Area__c), TEXT(Contact.Area__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tutor Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TutorSkillSet__c</fullName>
        <formula>IF(INCLUDES( Contact.Tutor_Secondary_Skill_Set__c , &quot;English&quot;),&quot;English;&quot;,&quot;&quot;)&amp;
IF(INCLUDES( Contact.Tutor_Secondary_Skill_Set__c , &quot;Maths&quot;),&quot;Maths;&quot;,&quot;&quot;)&amp;
IF(INCLUDES( Contact.Tutor_Secondary_Skill_Set__c , &quot;Science&quot;),&quot;Science;&quot;,&quot;&quot;)&amp;
IF(INCLUDES( Contact.Tutor_Secondary_Skill_Set__c , &quot;AP / LAC&quot;),&quot;AP / LAC;&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tutor Skill Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TutorStartDate__c</fullName>
        <formula>Contact.Tutor_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tutor Start Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BankNumberMustBe8Digits</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEN(BankAccountNumberEncrypted__c) &gt; 0,
NOT(REGEX( BankAccountNumberEncrypted__c , &quot;[0-9]{8}&quot;))
)</errorConditionFormula>
        <errorDisplayField>BankAccountNumberEncrypted__c</errorDisplayField>
        <errorMessage>Bank Account Number must be 8 Digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SortCode6Digits</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEN(  BankSortCodeEncrypted__c ) &gt; 0,
NOT(REGEX( BankSortCodeEncrypted__c , &quot;[0-9]{6}&quot;))
)</errorConditionFormula>
        <errorDisplayField>BankSortCodeEncrypted__c</errorDisplayField>
        <errorMessage>Sort code must be six digits</errorMessage>
    </validationRules>
</CustomObject>